@@ -10,7 +10,7 @@ before_install:
   - script/kill-travis
   - script/start-services
   - script/install-kyotocabinet
-  - sudo apt-get install -qq libtokyocabinet8 libtokyocabinet-dev liblzo2-dev libtdb-dev
+  - sudo apt-get install -qq libtokyocabinet8 libtokyocabinet-dev liblzo2-dev libtdb-dev tokyotyrant
   - script/install-bundle
   - script/upload-bundle
 install: 'echo "Bundle installed"'
