@@ -1,3 +1,7 @@
+master
+
+* Adapters::TokyoTyrant added
+
 0.7.9
 
 * Adapters::KyotoCabinet added
